Shift shoutout list down to avoid shadow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,6 @@
 
 header {
   position: fixed;
-  margin-bottom: 30px;
   width: 100%;
   background-color: white;
   box-shadow: 0px 0px 30px white;
@@ -51,7 +50,7 @@ hr {
 }
 
 .shoutouts {
-  margin-top: 150px;
+  margin-top: 165px;
   margin-bottom: 150px;
 }
 
